@@ -249,6 +249,10 @@ PYCAIRO_MOD_INIT(_cairo)
   if (PyType_Ready(&PycairoGlyph_Type) < 0)
     return PYCAIRO_MOD_ERROR_VAL;
 
+  PycairoRectangle_Type.tp_base = &PyTuple_Type;
+  if (PyType_Ready(&PycairoRectangle_Type) < 0)
+    return PYCAIRO_MOD_ERROR_VAL;
+
 #ifdef CAIRO_HAS_SCRIPT_SURFACE
   if (PyType_Ready(&PycairoScriptDevice_Type) < 0)
     return PYCAIRO_MOD_ERROR_VAL;
@@ -381,6 +385,9 @@ PYCAIRO_MOD_INIT(_cairo)
 
   Py_INCREF(&PycairoGlyph_Type);
   PyModule_AddObject(m, "Glyph", (PyObject *)&PycairoGlyph_Type);
+
+  Py_INCREF(&PycairoRectangle_Type);
+  PyModule_AddObject(m, "Rectangle", (PyObject *)&PycairoRectangle_Type);
 
 #ifdef CAIRO_HAS_SCRIPT_SURFACE
   Py_INCREF(&PycairoScriptDevice_Type);
